--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# Ignore storage of uploaded media
+/storage/
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
