--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "qrcode": "^1.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "5.5.0",
     "speakeasy": "^2.0.0",
+    "swr": "^2.3.6",
     "ws": "^8.18.3"
   },
   "devDependencies": {
