--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "export": "next export",
     "start": "next start",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "migrate-sessions-to-redis": "ts-node scripts/migrate-sessions-to-redis.ts"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.916.0",
@@ -31,7 +32,8 @@
     "react-icons": "5.5.0",
     "speakeasy": "^2.0.0",
     "swr": "^2.3.6",
-    "ws": "^8.18.3"
+    "ws": "^8.18.3",
+    "ioredis": "^5.3.2"
   },
   "devDependencies": {
     "@prisma/client": "^6.18.0",
@@ -42,6 +44,7 @@
     "@types/react-dom": "19",
     "@types/ws": "^8.18.1",
     "prisma": "^6.18.0",
+    "ts-node": "^10.9.2",
     "typescript": "5"
   }
 }
