--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bcryptjs": "3.0.2",
     "formidable": "^3.5.4",
     "framer-motion": "12.23.22",
+    "ioredis": "^5.3.2",
     "jsonwebtoken": "9.0.2",
     "lottie-react": "^2.4.1",
     "lottie-web": "^5.13.0",
@@ -32,18 +33,17 @@
     "react-icons": "5.5.0",
     "speakeasy": "^2.0.0",
     "swr": "^2.3.6",
-    "ws": "^8.18.3",
-    "ioredis": "^5.3.2"
+    "ws": "^8.18.3"
   },
   "devDependencies": {
-    "@prisma/client": "^6.18.0",
+    "@prisma/client": "^6.19.0",
     "@types/formidable": "^3.4.6",
     "@types/next-auth": "^3.15.0",
     "@types/node": "20",
     "@types/react": "19",
     "@types/react-dom": "19",
     "@types/ws": "^8.18.1",
-    "prisma": "^6.18.0",
+    "prisma": "^6.19.0",
     "ts-node": "^10.9.2",
     "typescript": "5"
   }
