--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-icons": "5.5.0",
     "speakeasy": "^2.0.0",
     "swr": "^2.3.6",
+    "uuid": "^9.0.1",
     "ws": "^8.18.3"
   },
   "devDependencies": {
